gateway-api-101/kong/face-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: face-route
  namespace: faces
  annotations:
    konghq.com/plugins: set-l5d-header
spec:
  parentRefs:
    - name: ingress
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /face
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: face
      port: 80
